@@ -1,0 +1,13 @@
+system type		: MIPS Malta
+processor		: 0
+cpu model		: MIPS 24K V0.0  FPU V0.0
+BogoMIPS		: 696.32
+wait instruction	: yes
+microsecond timers	: yes
+tlb_entries		: 16
+extra interrupt vector	: yes
+hardware watchpoint	: yes
+ASEs implemented	:
+VCED exceptions		: not available
+VCEI exceptions		: not available
+
