@@ -1,14 +1,14 @@
-subarch r4k-ip22
-cpuinfo r4k-ip22.cpuinfo
+subarch 5kc-malta
+cpuinfo 5kc-malta.cpuinfo
 majors 2.6
-flavour r4k-ip22
-kernel-2.6 linux-image-2.6-r4k-ip22
+flavour 5kc-malta
+kernel-2.6 linux-image-2.6-5kc-malta
 usable \
-  linux-image-2.6-r4k-ip22
-unusable \
   linux-image-2.6-4kc-malta \
-  linux-image-2.6-5kc-malta \
+  linux-image-2.6-5kc-malta
+unusable \
   linux-image-2.6-qemu \
+  linux-image-2.6-r4k-ip22 \
   linux-image-2.6-r5k-ip32 \
   linux-image-2.6-sb1-bcm91250a \
   linux-image-2.6-sb1a-bcm91480b
