@@ -6,6 +6,8 @@ kernel-2.6 linux-image-2.6-qemu
 usable \
   linux-image-2.6-qemu
 unusable \
+  linux-image-2.6-4kc-malta \
+  linux-image-2.6-5kc-malta \
   linux-image-2.6-r4k-ip22 \
   linux-image-2.6-r5k-ip32 \
   linux-image-2.6-sb1-bcm91250a \
