@@ -7,6 +7,8 @@ usable \
   linux-image-2.6-sb1-bcm91250a \
   linux-image-2.6.18-1-sb1-bcm91250a
 unusable \
+  linux-image-2.6-4kc-malta \
+  linux-image-2.6-5kc-malta \
   linux-image-2.6-qemu \
   linux-image-2.6-r4k-ip22 \
   linux-image-2.6-r5k-ip32 \
