@@ -1,15 +1,15 @@
-subarch sb1-bcm91250a
-cpuinfo sb1-bcm91250a.cpuinfo
+subarch 4kc-malta
+cpuinfo 4kc-malta.cpuinfo
 majors 2.6
-flavour sb1-bcm91250a
-kernel-2.6 linux-image-2.6-sb1-bcm91250a
+flavour 4kc-malta
+kernel-2.6 linux-image-2.6-4kc-malta
 usable \
-  linux-image-2.6-sb1-bcm91250a
+  linux-image-2.6-4kc-malta
 unusable \
-  linux-image-2.6-4kc-malta \
   linux-image-2.6-5kc-malta \
   linux-image-2.6-qemu \
   linux-image-2.6-r3k-kn02 \
   linux-image-2.6-r4k-kn04 \
   linux-image-2.6-r5k-cobalt \
+  linux-image-2.6-sb1-bcm91250a \
   linux-image-2.6-sb1a-bcm91480b
