@@ -11,6 +11,9 @@ base-installer (1.87) UNRELEASED; urgency=low
   [ Christian Perrier ]
   * Add a dependency on ${misc:Depends} for base-installer so that it
     depends properly on debconf
+  
+  [ Aurelien Jarno ]
+  * Add support for the MIPS Malta platform. 
 
  -- Christian Perrier <bubulle@debian.org>  Sun, 13 Jan 2008 20:17:11 +0100
 
